# fastapi-vue-admin

./: .gitignore
server/: .pylintrc  aerich.ini  config.yaml  init_data.py  main.py  pyproject.toml
server/api/: __init__.py  deps.py  des.py
server/api/v1/: __init__.py  sys_menu.py  sys_user.py
server/core/: celery_app.py  config.py  init_db.py  security.py
server/extensions/: logger.py
server/migrations/models/: 0_20201124132327_init.json  0_20201202134345_init.json
server/models/: __init__.py  mixin.py  sys_api.py  sys_authority.py  sys_authorty.py  sys_casbin.py  sys_dict.py  sys_jwt.py  sys_menu.py  sys_operation_record.py  sys_user.py
server/models/request/: __init__.py
server/models/response/: __init__.py  common.py
server/schemas/: __init__.py  token.py
server/schemas/request/: __init__.py  common.py  sys_menu.py  sys_user.py
server/schemas/response/: __init__.py  common.py  response.py  sys_menu.py  sys_user.py
server/utils/: __init__.py  custom_exc.py  middleware.py  reset_token.py  response.py  send_email.py  token.py
web/: package-lock.json  package.json  vue.config.js
web/src/api/: menu.js
web/src/router/: index.js
web/src/store/module/: router.js
web/src/view/login/: login.vue
